@@ -1,1 +1,34 @@
-# TODO for GLSR# Copyright 1999-2004 Gentoo Foundation# Distributed under the terms of the GNU General Public License v2## $Id: TODO,v 1.2 2004/11/04 01:07:15 port001 Exp $Ian:* Consolidate the indexes into just the one (duplicate code = bad).* Convert the admin site modules over to the new style.* Convert indexes into classes, perhaps. Anyone:* View Changelog* Create new versions of scripts* Rank scripts* Member List* Profile* Fix the search feature* Implement the news page* Code the main page* Fix the login for the admin section* Thousands of other things that I can't think of right now.
+# TODO for GLSR
+# Copyright 1999-2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+#
+# $Id: TODO,v 1.3 2004/11/04 19:02:44 port001 Exp $
+
+
+Ian:
+* Consolidate the indexes into just the one (duplicate code = bad).
+
+* Convert the admin site modules over to the new style.
+
+* Convert indexes into classes, perhaps. (DONE) 
+
+Anyone:
+* View Changelog
+
+* Create new versions of scripts
+
+* Rank scripts
+
+* Member List
+
+* Profile
+
+* Fix the search feature
+
+* Implement the news page
+
+* Code the main page
+
+* Fix the login for the admin section
+
+* Thousands of other things that I can't think of right now.
