@@ -2,7 +2,11 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.9 2004/11/04 01:48:20 port001 Exp $
+# $Id: ChangeLog,v 1.10 2004/11/04 19:02:44 port001 Exp $
+
+05 Nov 2004; Ian Leitch <port001@gentoo.org>:
+ * Converted the main index into a class
+ * Tiny fixes
 
 04 Nov 2004; Ian Leitch <port001@gentoo.org>:
  * Moved the session checking code from Page_Login._check_session into
